# flowbase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
examples/iris/: README.md
examples/tables/: README.md
flowbase/: __init__.py
flowbase/api/: __init__.py
flowbase/cli/: __init__.py  main.py
flowbase/core/: __init__.py
flowbase/experiments/: __init__.py  runner.py  tracker.py
flowbase/incremental/: __init__.py  events.py  graph.py  manifests.py  planner.py  work_units.py
flowbase/inference/: __init__.py  runner.py
flowbase/ml/: __init__.py
flowbase/models/: trainer.py
flowbase/observability/: __init__.py  recorder.py  sinks.py
flowbase/pipelines/: __init__.py  dataset_compiler.py  declarative_feature_compiler.py  executor.py  feature_compiler.py
flowbase/query/: __init__.py  base.py  factory.py
flowbase/registry/: __init__.py  providers.py
flowbase/rollup/: __init__.py  runner.py
flowbase/scrapers/: __init__.py  runner.py
flowbase/state/: __init__.py  interfaces.py
flowbase/storage/: __init__.py  (+3 more)
tests/: test_generated_registry_support.py  test_incremental_config_schemas.py  test_incremental_manifests.py  test_incremental_materializers.py  test_incremental_planner.py  test_incremental_planner_fixtures.py  test_manifest_resolution.py  test_observability.py  test_python_workflow_task.py  test_rollup_runner.py  test_table_storage_profiles.py  test_transform_partitioned_output.py  test_transform_runner.py  test_workflow_runner.py  test_workflow_runner_incremental_dry_run.py  test_workflow_runner_table_loader_mode.py
(+84 files in other folders)
